{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 82,
  "lineage": "97850d44-f320-2217-acb6-8d69e91e9d55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09f33731c37018c3a",
            "arn": "arn:aws:ec2:us-east-2:183631338552:instance/i-07f5a173e97c3f492",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f5a173e97c3f492",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "levelup_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e573554074f06058",
            "private_dns": "ip-10-0-101-110.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.110",
            "public_dns": "ec2-18-217-180-193.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.180.193",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b65f02583c190839",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-052340bf284540f05",
            "tags": {
              "Environmnent": "development",
              "Name": "instance-development"
            },
            "tags_all": {
              "Environmnent": "development",
              "Name": "instance-development"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a340a94d6fa969d8"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.levelup_key",
            "aws_security_group.allow-ssh",
            "module.develop-vpc.module.levelup-vpc.aws_subnet.public",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:security-group/sg-0a340a94d6fa969d8",
            "description": "security group that allows ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a340a94d6fa969d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-development",
            "name_prefix": "",
            "owner_id": "183631338552",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environmnent": "development",
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Environmnent": "development",
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183631338552",
            "id": "sg-0a340a94d6fa969d8",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:network-acl/acl-0656bd8a6c90f45f5",
            "default_network_acl_id": "acl-0656bd8a6c90f45f5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0656bd8a6c90f45f5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "183631338552",
            "region": "us-east-2",
            "subnet_ids": [
              "subnet-052340bf284540f05",
              "subnet-0676f98728b6aec3f",
              "subnet-09de8de8fdb460017",
              "subnet-0cb6be0cdc12a7474",
              "subnet-0d2f38a579f9338f8",
              "subnet-0e5fc8a31b9d6fcd8"
            ],
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:route-table/rtb-0547a02e694d14c32",
            "default_route_table_id": "rtb-0547a02e694d14c32",
            "id": "rtb-0547a02e694d14c32",
            "owner_id": "183631338552",
            "propagating_vgws": null,
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:security-group/sg-0f386d70420ced157",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f386d70420ced157",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "183631338552",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:internet-gateway/igw-04822d2b0c60d897f",
            "id": "igw-04822d2b0c60d897f",
            "owner_id": "183631338552",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04822d2b0c60d897f",
            "id": "r-rtb-0708721d665e1600a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0708721d665e1600a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_internet_gateway.this",
            "module.develop-vpc.module.levelup-vpc.aws_route_table.public",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:route-table/rtb-0018821fbee1cf560",
            "id": "rtb-0018821fbee1cf560",
            "owner_id": "183631338552",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:route-table/rtb-06d3222beb34870cd",
            "id": "rtb-06d3222beb34870cd",
            "owner_id": "183631338552",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:route-table/rtb-01524d9b90b5a0b58",
            "id": "rtb-01524d9b90b5a0b58",
            "owner_id": "183631338552",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:route-table/rtb-0708721d665e1600a",
            "id": "rtb-0708721d665e1600a",
            "owner_id": "183631338552",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0093a84a6316e7688",
            "region": "us-east-2",
            "route_table_id": "rtb-0018821fbee1cf560",
            "subnet_id": "subnet-0e5fc8a31b9d6fcd8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_route_table.private",
            "module.develop-vpc.module.levelup-vpc.aws_subnet.private",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097bee3c003ea7c95",
            "region": "us-east-2",
            "route_table_id": "rtb-06d3222beb34870cd",
            "subnet_id": "subnet-09de8de8fdb460017"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_route_table.private",
            "module.develop-vpc.module.levelup-vpc.aws_subnet.private",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d6b511c5eed3bc1",
            "region": "us-east-2",
            "route_table_id": "rtb-01524d9b90b5a0b58",
            "subnet_id": "subnet-0cb6be0cdc12a7474"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_route_table.private",
            "module.develop-vpc.module.levelup-vpc.aws_subnet.private",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041771ef0db5243eb",
            "region": "us-east-2",
            "route_table_id": "rtb-0708721d665e1600a",
            "subnet_id": "subnet-052340bf284540f05"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_route_table.public",
            "module.develop-vpc.module.levelup-vpc.aws_subnet.public",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b92a56984adbe61d",
            "region": "us-east-2",
            "route_table_id": "rtb-0708721d665e1600a",
            "subnet_id": "subnet-0676f98728b6aec3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_route_table.public",
            "module.develop-vpc.module.levelup-vpc.aws_subnet.public",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06edde8a56dedba49",
            "region": "us-east-2",
            "route_table_id": "rtb-0708721d665e1600a",
            "subnet_id": "subnet-0d2f38a579f9338f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_route_table.public",
            "module.develop-vpc.module.levelup-vpc.aws_subnet.public",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:subnet/subnet-0e5fc8a31b9d6fcd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5fc8a31b9d6fcd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631338552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183631338552",
            "id": "subnet-0e5fc8a31b9d6fcd8",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:subnet/subnet-09de8de8fdb460017",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09de8de8fdb460017",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631338552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183631338552",
            "id": "subnet-09de8de8fdb460017",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:subnet/subnet-0cb6be0cdc12a7474",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb6be0cdc12a7474",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631338552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183631338552",
            "id": "subnet-0cb6be0cdc12a7474",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:subnet/subnet-052340bf284540f05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052340bf284540f05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631338552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183631338552",
            "id": "subnet-052340bf284540f05",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:subnet/subnet-0676f98728b6aec3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0676f98728b6aec3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631338552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183631338552",
            "id": "subnet-0676f98728b6aec3f",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:subnet/subnet-0d2f38a579f9338f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2f38a579f9338f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631338552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-public-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-public-us-east-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0141433626f314d6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183631338552",
            "id": "subnet-0d2f38a579f9338f8",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:183631338552:vpc/vpc-0141433626f314d6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0656bd8a6c90f45f5",
            "default_route_table_id": "rtb-0547a02e694d14c32",
            "default_security_group_id": "sg-0f386d70420ced157",
            "dhcp_options_id": "dopt-00bc0888599b865bd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0141433626f314d6e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0547a02e694d14c32",
            "owner_id": "183631338552",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}